--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,58 @@
 body {
-  display: block;
+  background-color: #f9f7fe;
+}
+
+h1 {
   text-align: center;
+}
+footer {
+  text-align: center;
+  padding: 20px;
+}
+
+select {
+  display: block;
+  width: 100%;
+  border-radius: 10px;
+  padding: 10px;
+  font-family: "Courier New", Courier, monospace;
+  font-size: medium;
+}
+
+h2 {
+  margin: 0 0 5px;
+}
+
+.container {
+  max-width: 350px;
+  margin: 0 auto;
+  background: white;
+  padding: 30px;
+  box-shadow: 0px 7px 29px 0px rgba(100, 100, 111, 0.2);
+  border-radius: 10px;
+}
+
+.city {
+  display: flex;
+  margin: 20px 0;
+  justify-content: space-between;
+  padding: 30px 0;
+  border-bottom: 1px dashed rgba(0, 0, 0, 0.2);
+}
+.city:last-child {
+  border: none;
+}
+
+.time {
+  font-weight: bold;
+  font-size: 30px;
+}
+
+.time small {
+  vertical-align: middle;
+  font-size: 15px;
+}
+
+.date {
+  opacity: 0.5;
 }
